@@ -14,3 +14,4 @@ Bug fixes
 ~~~~~~~~~
 
  * Migration for addition of ``Page.draft_title`` field is now reversible (Venelin Stoykov)
+ * Fixed failure on application startup when ``ManifestStaticFilesStorage`` is in use and ``collectstatic`` has not yet been run (Matt Westcott)
